--- a/ASM/EXE/50P104rec.ini
+++ b/ASM/EXE/50P104rec.ini
@@ -1,7 +1,8 @@
 {
   "prj": {
-    "count": 2,
-    "file0": "D:\\MORE\\NQ8021_50P104_2319时钟计时\\50P104\\SIM\\NQ8004.prj",
-    "file1": "C:\\Users\\admin\\Desktop\\NQ8004\\50P104\\SIM\\NQ8004.prj"
+    "count": 3,
+    "file0": "D:\\MORE\\NQ8021_50P104_2319时钟计时\\50P104\\50P104\\SIM\\NQ8004.prj",
+    "file1": "D:\\MORE\\NQ8021_50P104_2319时钟计时\\50P104\\SIM\\NQ8004.prj",
+    "file2": "C:\\Users\\admin\\Desktop\\NQ8004\\50P104\\SIM\\NQ8004.prj"
   }
 }
